--- a/index.html
+++ b/index.html
@@ -31,7 +31,27 @@
        </header>
 
        <div class="realtors">
-            top 3 realtors
+            <h3 class="heading-3">Top 3 Realtors</h3>
+            <div class="realtors__list">
+
+                <img src="img/realtor-2.jpeg" alt="realtor 2" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Kim Brown</h4>
+                    <p class="realtors__sold">1.5 million Houses Sold</p>
+                </div>
+
+                <img src="img/realtor-1.jpeg" alt="realtor 1" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Erik Feinman</h4>
+                    <p class="realtors__sold">245 Houses Sold</p>
+                </div>
+
+                <img src="img/realtor-3.jpeg" alt="realtor 3" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Tobey Ramsey</h4>
+                    <p class="realtors__sold">27 Houses Sold</p>
+                </div>
+            </div>
        </div>
 
        <section class="features">
